force-app/main/default/objects/CurrentOrders__x/CurrentOrders__x.object-meta.xml
<CustomObject>
    <description>CurrentOrdersSet</description>
    <externalDataSource>TCP_Get_Current_Orders</externalDataSource>
    <externalName>CurrentOrdersSet</externalName>
    <label>CurrentOrders</label>
    <pluralLabel>CurrentOrdersSet</pluralLabel>
</CustomObject>