force-app/main/default/objects/CurrentOrders__x/fields/BolDeliveryNo__c.field-meta.xml
<CustomField>
    <fullName>BolDeliveryNo__c</fullName>
    <description>BolDeliveryNo</description>
    <externalDeveloperName>BolDeliveryNo</externalDeveloperName>
    <label>BolDeliveryNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>