force-app/main/default/objects/CurrentOrders__x/fields/CondInfo__c.field-meta.xml
<CustomField>
    <fullName>CondInfo__c</fullName>
    <description>CondInfo</description>
    <externalDeveloperName>CondInfo</externalDeveloperName>
    <label>CondInfo</label>
    <length>132</length>
    <type>Text</type>
</CustomField>