force-app/main/default/objects/CurrentOrders__x/fields/CustomerPoNo__c.field-meta.xml
<CustomField>
    <fullName>CustomerPoNo__c</fullName>
    <description>CustomerPoNo</description>
    <externalDeveloperName>CustomerPoNo</externalDeveloperName>
    <label>CustomerPoNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>