force-app/main/default/objects/CurrentOrders__x/fields/GmDate__c.field-meta.xml
<CustomField>
    <fullName>GmDate__c</fullName>
    <description>GmDate</description>
    <externalDeveloperName>GmDate</externalDeveloperName>
    <label>GmDate</label>
    <type>DateTime</type>
</CustomField>