force-app/main/default/objects/CurrentOrders__x/fields/GmQuan__c.field-meta.xml
<CustomField>
    <fullName>GmQuan__c</fullName>
    <description>GmQuan</description>
    <externalDeveloperName>GmQuan</externalDeveloperName>
    <label>GmQuan</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>