force-app/main/default/objects/CurrentOrders__x/fields/GmStat__c.field-meta.xml
<CustomField>
    <fullName>GmStat__c</fullName>
    <description>GmStat</description>
    <externalDeveloperName>GmStat</externalDeveloperName>
    <label>GmStat</label>
    <length>1</length>
    <type>Text</type>
</CustomField>