force-app/main/default/objects/CurrentOrders__x/fields/GmUnit__c.field-meta.xml
<CustomField>
    <fullName>GmUnit__c</fullName>
    <description>GmUnit</description>
    <externalDeveloperName>GmUnit</externalDeveloperName>
    <label>GmUnit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>