force-app/main/default/objects/CurrentOrders__x/fields/InvStat__c.field-meta.xml
<CustomField>
    <fullName>InvStat__c</fullName>
    <description>InvStat</description>
    <externalDeveloperName>InvStat</externalDeveloperName>
    <label>InvStat</label>
    <length>1</length>
    <type>Text</type>
</CustomField>