force-app/main/default/objects/CurrentOrders__x/fields/Mot__c.field-meta.xml
<CustomField>
    <fullName>Mot__c</fullName>
    <description>Mot</description>
    <externalDeveloperName>Mot</externalDeveloperName>
    <label>Mot</label>
    <length>20</length>
    <type>Text</type>
</CustomField>