force-app/main/default/objects/CurrentOrders__x/fields/MotId__c.field-meta.xml
<CustomField>
    <fullName>MotId__c</fullName>
    <description>MotId</description>
    <externalDeveloperName>MotId</externalDeveloperName>
    <label>MotId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>