force-app/main/default/objects/CurrentOrders__x/fields/MotKey__c.field-meta.xml
<CustomField>
    <fullName>MotKey__c</fullName>
    <description>MotKey</description>
    <externalDeveloperName>MotKey</externalDeveloperName>
    <label>MotKey</label>
    <length>2</length>
    <type>Text</type>
</CustomField>