force-app/main/default/objects/CurrentOrders__x/fields/Mwsbp__c.field-meta.xml
<CustomField>
    <fullName>Mwsbp__c</fullName>
    <description>Mwsbp</description>
    <externalDeveloperName>Mwsbp</externalDeveloperName>
    <label>Mwsbp</label>
    <precision>14</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>