force-app/main/default/objects/CurrentOrders__x/fields/Ordername__c.field-meta.xml
<CustomField>
    <fullName>Ordername__c</fullName>
    <description>Ordername</description>
    <externalDeveloperName>Ordername</externalDeveloperName>
    <label>Ordername</label>
    <length>50</length>
    <type>Text</type>
</CustomField>