force-app/main/default/objects/CurrentOrders__x/fields/PriceInfo__c.field-meta.xml
<CustomField>
    <fullName>PriceInfo__c</fullName>
    <description>PriceInfo</description>
    <externalDeveloperName>PriceInfo</externalDeveloperName>
    <label>PriceInfo</label>
    <length>132</length>
    <type>Text</type>
</CustomField>