force-app/main/default/objects/CurrentOrders__x/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>ProductName</description>
    <externalDeveloperName>ProductName</externalDeveloperName>
    <label>ProductName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>