force-app/main/default/objects/CurrentOrders__x/fields/QuantityInv__c.field-meta.xml
<CustomField>
    <fullName>QuantityInv__c</fullName>
    <description>QuantityInv</description>
    <externalDeveloperName>QuantityInv</externalDeveloperName>
    <label>QuantityInv</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>