force-app/main/default/objects/CurrentOrders__x/fields/SalesItemNo__c.field-meta.xml
<CustomField>
    <fullName>SalesItemNo__c</fullName>
    <description>SalesItemNo</description>
    <externalDeveloperName>SalesItemNo</externalDeveloperName>
    <label>SalesItemNo</label>
    <length>6</length>
    <type>Text</type>
</CustomField>