force-app/main/default/objects/CurrentOrders__x/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <description>Terms</description>
    <externalDeveloperName>Terms</externalDeveloperName>
    <label>Terms</label>
    <length>30</length>
    <type>Text</type>
</CustomField>