force-app/main/default/objects/CurrentOrders__x/fields/TotGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>TotGrossAmount__c</fullName>
    <description>TotGrossAmount</description>
    <externalDeveloperName>TotGrossAmount</externalDeveloperName>
    <label>TotGrossAmount</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>