force-app/main/default/objects/CurrentOrders__x/fields/TotVatAmount__c.field-meta.xml
<CustomField>
    <fullName>TotVatAmount__c</fullName>
    <description>TotVatAmount</description>
    <externalDeveloperName>TotVatAmount</externalDeveloperName>
    <label>TotVatAmount</label>
    <precision>14</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>