force-app/main/default/objects/CurrentOrders__x/fields/Zterm__c.field-meta.xml
<CustomField>
    <fullName>Zterm__c</fullName>
    <description>Zterm</description>
    <externalDeveloperName>Zterm</externalDeveloperName>
    <label>Zterm</label>
    <length>4</length>
    <type>Text</type>
</CustomField>