force-app/main/default/objects/CurrentOrders__x/fields/Ztermdesc__c.field-meta.xml
<CustomField>
    <fullName>Ztermdesc__c</fullName>
    <description>Ztermdesc</description>
    <externalDeveloperName>Ztermdesc</externalDeveloperName>
    <label>Ztermdesc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>