force-app/main/default/objects/CurrentOrders__x/fields/Ztype__c.field-meta.xml
<CustomField>
    <fullName>Ztype__c</fullName>
    <description>Ztype</description>
    <externalDeveloperName>Ztype</externalDeveloperName>
    <label>Ztype</label>
    <length>1</length>
    <type>Text</type>
</CustomField>